# cookiecutter-python-ml-project

./: .gitignore  README.md  cookiecutter.json  noxfile.py
.github/workflows/: constraints.txt
docs/: conf.py  quickstart.md  requirements.txt
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: linting_and_type_checking.yaml
{{cookiecutter.project_name}}/dev_configurations/: .flake8  .pre-commit-config.yaml
{{cookiecutter.project_name}}/docs/: README.md
{{cookiecutter.project_name}}/docs/source/: conf.py  index.rst  usage.rst
{{cookiecutter.project_name}}/scripts/: setup_host.env.sh  setup_host_env.sh
{{cookiecutter.project_name}}/tests/: test_main.py
