[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.friendly_name}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
readme = "README.md"
homepage = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
repository = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
documentation = "https://{{cookiecutter.project_name}}.readthedocs.io"
{% if cookiecutter.package_name != cookiecutter.project_name.replace('-', '_') -%}
packages = [
    { include = "{{cookiecutter.package_name}}", from = "src" },
]
{% endif -%}
classifiers = [
    "{{cookiecutter.development_status}}",
]

[tool.poetry.urls]
Changelog = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}/releases"

[tool.poe.tasks]
# This should only be called if you know you are using nvidia gpus
pytorch = "python -m pip install torch==2.3.0+cu121 torchvision==0.18.0+cu121 -f https://download.pytorch.org/whl/torch_stable.html"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
click = "^8.1.7"
torch = "^2.3.1"
torchvision = "^0.18.0"
pytorch-lightning = "^2.3.3"
wandb = "^0.17.4"
fiftyone = "^0.24.1"
numpy = "^2.0.0"
opencv-python-headless = "^4.10.0.84"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.12.0"}
flake8 = "^5.0.4"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^22.12.6"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.2.7"
isort = "^5.13.2"
pygments = "^2.18.0"
pyright = "^1.1.370"
pre-commit = "^2.21.0"
nox = "^2022.11.21"
nox-poetry = "^1.0.3"
poethepoet = "^0.18.0"
pep8-naming = "^0.13.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
allure-pytest = "^2.13.5"
coverage = {extras = ["toml"], version = "^6.5.0"}
xdoctest = "^1.1.5"
typeguard = "^2.13.3"
safety = "^2.3.5"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
sphinx-autobuild = "^2021.3.14"
sphinx-click = "^4.4.0"
furo = "^2022.12.7"

[tool.poetry.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.package_name}}.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.package_name}}", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
include_trailing_comma=true

[tool.pyright]
include = ["."]

typeCheckingMode = "basic"
useLibraryCodeForTypes = true
pythonPlatform = "Linux"
pythonVersion = "3.10"
verboseOutput = true

reportMissingImports = true
reportMissingTypeStubs = false
reportGeneralTypeIssues = "warning"
reportPrivateImportUsage = "none"
reportUnboundVariable = "warning"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
